# Inhibition

./: .gitignore  README.md  set_up_chip  todo.rtf
hardware/3d models/EEG Terminal Connectors/: 01.spacer.STL  02.middle_arm.STL  03.long_arm.STL  04.short_arm.STL  05.terminal.STL  06.bridge.STL  07.side_arm.STL
hardware/schematics and pcb/: amplifier.bak  amplifier.csv  amplifier.kicad_pcb  amplifier.kicad_pcb-CNC version (with some problems).kicad_pcb  amplifier.kicad_pcb-bak  amplifier.net  amplifier.pro  amplifier.sch  amplifier.xml  fp-lib-table  inhibition_logo.mod  koutsomichalis_logo.mod  switch_dpst_with_led.dcm
hardware/schematics and pcb/gerber/: amplifier-B.Adhes.gbr  amplifier-B.CrtYd.gbr  amplifier-B.Fab.gbr  amplifier-B.Mask.gbr  amplifier-B.Paste.gbr  amplifier-B.SilkS.gbr  amplifier-Cmts.User.gbr  amplifier-Dwgs.User.gbr  amplifier-Eco1.User.gbr  amplifier-Eco2.User.gbr  amplifier-F.Adhes.gbr  amplifier-F.CrtYd.gbr  amplifier-F.Fab.gbr  amplifier-F.Mask.gbr  amplifier-F.Paste.gbr  amplifier-F.SilkS.gbr  amplifier-Margin.gbr  amplifier.drl
hardware/schematics and pcb/gerber/gerber/: inhibition.gbl  inhibition.gml.gbr  inhibition.gtl  inhibition.gts  inhibition.txt
hardware/schematics and pcb/mar.pretty/: Push_E-Switch_KS01Q01.kicad_mod
software/ML (c++)/: CMakeLists.txt
software/ML (c++)/src/: main.cpp
software/ML for workshop (c++) /src/: main.cpp
software/adc_read/: CMakeLists.txt
software/adc_read/src/: main_pot.cpp  read_spi.h  save_wav.cpp  settings.h
software/c++ code/src/: read_spi.cpp  save_wav.h
software/main (supercollider)/: audio_engine.scd  eeg_handler.scd  main.scd  rl.scd  sensors_handler.scd  synthdef.scd
software/main for workshops (supercollider)/: analysis.scd  audio_engine.scd  eeg_handler.scd  main.scd  rl.scd  synthdef.scd  train.data
software/obsolete/: sc_bridge.py
software/python/: rl.py
software/read_spi (c++)/src/: main_eeg.cpp
software/sc code/: audio_engine.scd  eeg_handler.scd  main.scd  sensors_handler.scd  synthdef.scd
software/sc dependencies/: Include.sc
software/tests/: test.scd
(+6 files in other folders)
